Revert "Changed /index.html"
This reverts commit 701fb633af7ed815658b0e30a3baa366fa5dff52.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="Marcelle Khalil-Hein" content="Marcelle Khalil-Hein">
 	<meta name="Marcelle Khalil-Hein Portfolio Page" content="Marcelle Khalil-Hein's Portfolio - Work and Contact Information">
-	<title>Marcelle Khalil-Hein UX/UI designer in Los Angeles, CA</title>
+	<title>Marcelle Khalil-Hein UX/UI designer Los Angeles, CA</title>
 
 </head>
 
