--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 				<svg width="53px" height="50px" viewBox="0 0 53 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<title>Artboard</title>
 					<svg width="53px" height="50px" viewBox="0 0 53 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-					    <title>Artboard</title>
-					    <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-					        <circle id="Oval" fill="#D46D1B" cx="26" cy="25" r="25"></circle>
-					        <path d="M21.5,12.170067 L9.77056763,34.9994093 L33.2968345,34.8898964 L21.5,12.170067 Z" id="Triangle" stroke="#FFFFFF" stroke-width="2"></path>
-					        <path d="M31.5,12.170067 L19.7705676,34.9994093 L43.2968345,34.8898964 L31.5,12.170067 Z" id="Triangle" stroke="#FFFFFF" stroke-width="2"></path>
-					    </g>
+						<title>Artboard</title>
+						<g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+							<circle id="Oval" fill="#D46D1B" cx="26" cy="25" r="25"></circle>
+							<path d="M21.5,12.170067 L9.77056763,34.9994093 L33.2968345,34.8898964 L21.5,12.170067 Z" id="Triangle" stroke="#FFFFFF" stroke-width="2"></path>
+							<path d="M31.5,12.170067 L19.7705676,34.9994093 L43.2968345,34.8898964 L31.5,12.170067 Z" id="Triangle" stroke="#FFFFFF" stroke-width="2"></path>
+						</g>
 					</svg>
 		</div>
-<nav>
-		<div>
-					<ul>
-						<li><a href="index.html" target="_self">Work</a></li>
-						<li><a href="about.html" target="_self">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-		</div>
-</nav>
+		<nav>
+			<div>
+				<ul>
+					<li><a href="index.html" target="_self">Work</a></li>
+					<li><a href="about.html" target="_self">About</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
 	</header>
 	<main>
 		<div>
@@ -50,9 +50,10 @@
 			<h3>Pinch</h3>
 			<p>Pinch is a mobile application that helps people take control of their finances.</p>
 			<p>Tools Used: Balasmiq, Sketch, Invision, UseBerry, Figma</p>
-			<a href="">Read more</a>
+			<a href="Pinch.html">Read more</a>
 		</div>
 		<br>
+
 
 		<div>
 			<picture>
@@ -103,48 +104,174 @@
 				<a href="mailto:marcellemkhalil@gmail.com">Email Me</a>
 			</div>
 		</div>
-			<br>
+		<br>
 		<div>
 			<!--social media icons-->
 			<a href="https://www.linkedin.com/in/marcelle-khalil-84828b70/" target="_blank">
-					<svg height="512px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"><defs id="defs19"/><g id="g3021"/><g id="Layer_1_1_"/><g id="Layer_1_1_-7" transform="translate(-819.672,-61.929991)"/><g id="g2995"><rect height="512" id="rect2989" rx="70" ry="70" style="fill:#017bbe;fill-opacity:1;stroke:none" transform="scale(-1,-1)" width="512" x="-512" y="-512"/><g id="g2987" transform="matrix(1.2026312,0,0,1.2026312,-54.384104,-52.796039)"><rect height="196.94901" id="rect3163" style="fill:#ffffff" width="63.599083" x="112.57325" y="203.761"/><path d="m 144.78291,175.39295 c 17.44046,0 31.58994,-14.01309 31.58994,-31.28355 0,-17.29015 -14.14948,-31.28535 -31.58994,-31.28535 -17.45188,0 -31.59076,13.9952 -31.59076,31.28535 0,17.27046 14.13888,31.28355 31.59076,31.28355 z" id="path3165" style="fill:#ffffff"/><path d="m 403.51679,291.89301 c -0.375,-10.338 1.962,-44.49 -22.773,-68.916 -12.969,-12.813 -19.519,-18.845 -51.092,-18.845 -25.367,0 -49.136,16.414 -58.562,29.468 v -28.851 h -64.78 v 195.017 h 64.78 c 0,0 0,-89.672 0,-111.17 0,-16.012 8.315,-33 30.943,-33 22.654,0 36.773,18.246 36.773,39.182 v 104.988 h 64.796 v -107.873 h -0.085 z" id="path3167" style="fill:#ffffff"/></g></g></svg>
+				<svg height="512px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
+					xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+					xmlns:svg="http://www.w3.org/2000/svg">
+					<defs id="defs19" />
+					<g id="g3021" />
+					<g id="Layer_1_1_" />
+					<g id="Layer_1_1_-7" transform="translate(-819.672,-61.929991)" />
+					<g id="g2995">
+						<rect height="512" id="rect2989" rx="70" ry="70" style="fill:#017bbe;fill-opacity:1;stroke:none" transform="scale(-1,-1)" width="512" x="-512" y="-512" />
+						<g id="g2987" transform="matrix(1.2026312,0,0,1.2026312,-54.384104,-52.796039)">
+							<rect height="196.94901" id="rect3163" style="fill:#ffffff" width="63.599083" x="112.57325" y="203.761" />
+							<path d="m 144.78291,175.39295 c 17.44046,0 31.58994,-14.01309 31.58994,-31.28355 0,-17.29015 -14.14948,-31.28535 -31.58994,-31.28535 -17.45188,0 -31.59076,13.9952 -31.59076,31.28535 0,17.27046 14.13888,31.28355 31.59076,31.28355 z"
+								id="path3165" style="fill:#ffffff" />
+							<path
+								d="m 403.51679,291.89301 c -0.375,-10.338 1.962,-44.49 -22.773,-68.916 -12.969,-12.813 -19.519,-18.845 -51.092,-18.845 -25.367,0 -49.136,16.414 -58.562,29.468 v -28.851 h -64.78 v 195.017 h 64.78 c 0,0 0,-89.672 0,-111.17 0,-16.012 8.315,-33 30.943,-33 22.654,0 36.773,18.246 36.773,39.182 v 104.988 h 64.796 v -107.873 h -0.085 z"
+								id="path3167" style="fill:#ffffff" />
+						</g>
+					</g>
+				</svg>
 
-			<a href="https://www.instagram.com/gingeruidesign/" target="_blank">
-					<svg id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css">
-						.st0{fill:#25D366;}
-						.st1{fill:#FFFFFF;}
-						.st2{fill:#FF0000;}
-						.st3{fill:#3D5A98;}
-						.st4{fill:url(#SVGID_1_);}
-						.st5{fill:url(#SVGID_2_);}
-						.st6{fill:#55ADEE;}
-						.st7{fill:#1E96C8;}
-						.st8{fill:#A9C9DD;}
-						.st9{fill:#C8DAEA;}
-						.st10{fill:none;}
-						.st11{fill:#4787F3;}
-						.st12{fill:#DC483C;}
-						.st13{fill:#FFCE43;}
-						.st14{fill:#149F5C;}
-						.st15{fill:#CE1E5B;}
-						.st16{fill:#72C5CD;}
-						.st17{fill:#DFA22F;}
-						.st18{fill:#3CB187;}
-						.st19{fill:#248C73;}
-						.st20{fill:#392538;}
-						.st21{fill:#BB242A;}
-						.st22{fill:none;stroke:#3CB187;stroke-miterlimit:10;}
-						.st23{fill:#009A57;}
-						.st24{fill:#FCCD37;}
-						.st25{fill:#2771F0;}
-					</style><g><linearGradient gradientUnits="userSpaceOnUse" id="SVGID_1_" x1="407.1325" x2="104.8675" y1="4.4733" y2="507.5267"><stop offset="0" style="stop-color:#4845A2"/><stop offset="4.536461e-02" style="stop-color:#5945A2"/><stop offset="0.1713" style="stop-color:#8444A1"/><stop offset="0.2698" style="stop-color:#9E44A1"/><stop offset="0.3282" style="stop-color:#A844A1"/><stop offset="0.3905" style="stop-color:#AB429A"/><stop offset="0.4788" style="stop-color:#B43C88"/><stop offset="0.4896" style="stop-color:#B53B85"/><stop offset="0.5577" style="stop-color:#BE3572"/><stop offset="0.6762" style="stop-color:#D22749"/><stop offset="0.7388" style="stop-color:#DF4F3E"/><stop offset="0.8559" style="stop-color:#F9A326"/><stop offset="1" style="stop-color:#F9DD26"/></linearGradient><path class="st4" d="M391.5,13H120.5C61.1,13,13,61.1,13,120.5v270.9C13,450.9,61.1,499,120.5,499h270.9   c59.4,0,107.5-48.1,107.5-107.5V120.5C499,61.1,450.9,13,391.5,13z"/><circle class="st1" cx="352.4" cy="160" r="21.2"/><g><path class="st1" d="M333.8,76H178.2C121.8,76,76,121.8,76,178.2v155.6C76,390.2,121.8,436,178.2,436h155.6    c56.4,0,102.2-45.9,102.2-102.2V178.2C436,121.8,390.2,76,333.8,76z M403.5,333.8c0,38.4-31.3,69.7-69.7,69.7H178.2    c-38.4,0-69.7-31.3-69.7-69.7V178.2c0-38.4,31.3-69.7,69.7-69.7h155.6c38.4,0,69.7,31.3,69.7,69.7V333.8z"/><path class="st1" d="M256,162.3c-51.7,0-93.7,42-93.7,93.7s42,93.7,93.7,93.7s93.7-42,93.7-93.7S307.7,162.3,256,162.3z     M256,317.2c-33.7,0-61.2-27.5-61.2-61.2s27.5-61.2,61.2-61.2s61.2,27.5,61.2,61.2S289.7,317.2,256,317.2z"/></g></g></svg>
+				<a href="https://www.instagram.com/gingeruidesign/" target="_blank">
+					<svg id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+						<style type="text/css">
+							.st0 {
+								fill: #25D366;
+							}
 
-				<a href="https://www.behance.net/marcellekhalil" target="_blank">
-					<svg height="1792" viewBox="0 0 1792 1792" width="1792" xmlns="http://www.w3.org/2000/svg"><path d="M1376 128q119 0 203.5 84.5t84.5 203.5v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960zm-749 367h-371v787h382q117 0 197-57.5t80-170.5q0-158-143-200 107-52 107-164 0-57-19.5-96.5t-56.5-60.5-79-29.5-97-8.5zm-22 318h-176v-184h163q119 0 119 90 0 94-106 94zm9 335h-185v-217h189q124 0 124 113 0 104-128 104zm650 32q-68 0-104-38t-36-107h411q1-10 1-30 0-132-74.5-220.5t-203.5-88.5q-128 0-210 86t-82 216q0 135 79 217t213 82q205 0 267-191h-138q-11 34-47.5 54t-75.5 20zm-10-366q113 0 124 122h-254q4-56 39-89t91-33zm-162-266h319v77h-319v-77z"/></svg>
-			</div>
-			<div>
-				<p>Copyright Marcelle Khalil 2020</p>
-			</div>
+							.st1 {
+								fill: #FFFFFF;
+							}
+
+							.st2 {
+								fill: #FF0000;
+							}
+
+							.st3 {
+								fill: #3D5A98;
+							}
+
+							.st4 {
+								fill: url(#SVGID_1_);
+							}
+
+							.st5 {
+								fill: url(#SVGID_2_);
+							}
+
+							.st6 {
+								fill: #55ADEE;
+							}
+
+							.st7 {
+								fill: #1E96C8;
+							}
+
+							.st8 {
+								fill: #A9C9DD;
+							}
+
+							.st9 {
+								fill: #C8DAEA;
+							}
+
+							.st10 {
+								fill: none;
+							}
+
+							.st11 {
+								fill: #4787F3;
+							}
+
+							.st12 {
+								fill: #DC483C;
+							}
+
+							.st13 {
+								fill: #FFCE43;
+							}
+
+							.st14 {
+								fill: #149F5C;
+							}
+
+							.st15 {
+								fill: #CE1E5B;
+							}
+
+							.st16 {
+								fill: #72C5CD;
+							}
+
+							.st17 {
+								fill: #DFA22F;
+							}
+
+							.st18 {
+								fill: #3CB187;
+							}
+
+							.st19 {
+								fill: #248C73;
+							}
+
+							.st20 {
+								fill: #392538;
+							}
+
+							.st21 {
+								fill: #BB242A;
+							}
+
+							.st22 {
+								fill: none;
+								stroke: #3CB187;
+								stroke-miterlimit: 10;
+							}
+
+							.st23 {
+								fill: #009A57;
+							}
+
+							.st24 {
+								fill: #FCCD37;
+							}
+
+							.st25 {
+								fill: #2771F0;
+							}
+						</style>
+						<g>
+							<linearGradient gradientUnits="userSpaceOnUse" id="SVGID_1_" x1="407.1325" x2="104.8675" y1="4.4733" y2="507.5267">
+								<stop offset="0" style="stop-color:#4845A2" />
+								<stop offset="4.536461e-02" style="stop-color:#5945A2" />
+								<stop offset="0.1713" style="stop-color:#8444A1" />
+								<stop offset="0.2698" style="stop-color:#9E44A1" />
+								<stop offset="0.3282" style="stop-color:#A844A1" />
+								<stop offset="0.3905" style="stop-color:#AB429A" />
+								<stop offset="0.4788" style="stop-color:#B43C88" />
+								<stop offset="0.4896" style="stop-color:#B53B85" />
+								<stop offset="0.5577" style="stop-color:#BE3572" />
+								<stop offset="0.6762" style="stop-color:#D22749" />
+								<stop offset="0.7388" style="stop-color:#DF4F3E" />
+								<stop offset="0.8559" style="stop-color:#F9A326" />
+								<stop offset="1" style="stop-color:#F9DD26" />
+							</linearGradient>
+							<path class="st4" d="M391.5,13H120.5C61.1,13,13,61.1,13,120.5v270.9C13,450.9,61.1,499,120.5,499h270.9   c59.4,0,107.5-48.1,107.5-107.5V120.5C499,61.1,450.9,13,391.5,13z" />
+							<circle class="st1" cx="352.4" cy="160" r="21.2" />
+							<g>
+								<path class="st1"
+									d="M333.8,76H178.2C121.8,76,76,121.8,76,178.2v155.6C76,390.2,121.8,436,178.2,436h155.6    c56.4,0,102.2-45.9,102.2-102.2V178.2C436,121.8,390.2,76,333.8,76z M403.5,333.8c0,38.4-31.3,69.7-69.7,69.7H178.2    c-38.4,0-69.7-31.3-69.7-69.7V178.2c0-38.4,31.3-69.7,69.7-69.7h155.6c38.4,0,69.7,31.3,69.7,69.7V333.8z" />
+								<path class="st1" d="M256,162.3c-51.7,0-93.7,42-93.7,93.7s42,93.7,93.7,93.7s93.7-42,93.7-93.7S307.7,162.3,256,162.3z     M256,317.2c-33.7,0-61.2-27.5-61.2-61.2s27.5-61.2,61.2-61.2s61.2,27.5,61.2,61.2S289.7,317.2,256,317.2z" />
+							</g>
+						</g>
+					</svg>
+
+					<a href="https://www.behance.net/marcellekhalil" target="_blank">
+						<svg height="1792" viewBox="0 0 1792 1792" width="1792" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M1376 128q119 0 203.5 84.5t84.5 203.5v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960zm-749 367h-371v787h382q117 0 197-57.5t80-170.5q0-158-143-200 107-52 107-164 0-57-19.5-96.5t-56.5-60.5-79-29.5-97-8.5zm-22 318h-176v-184h163q119 0 119 90 0 94-106 94zm9 335h-185v-217h189q124 0 124 113 0 104-128 104zm650 32q-68 0-104-38t-36-107h411q1-10 1-30 0-132-74.5-220.5t-203.5-88.5q-128 0-210 86t-82 216q0 135 79 217t213 82q205 0 267-191h-138q-11 34-47.5 54t-75.5 20zm-10-366q113 0 124 122h-254q4-56 39-89t91-33zm-162-266h319v77h-319v-77z" />
+							</svg>
+		</div>
+		<div>
+			<p>Copyright Marcelle Khalil 2020</p>
+		</div>
 
 	</footer>
 </body>
