--- a/Pinch.html
+++ b/Pinch.html
@@ -5,35 +5,31 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="Marcelle Khalil-Hein" content="Marcelle Khalil-Hein">
 	<meta name="Marcelle Khalil-Hein Portfolio Page" content="Marcelle Khalil-Hein's Portfolio - Work and Contact Information">
-	<title>Marcelle Khalil-Hein UX/UI designer Los Angeles, CA</title>
-
+	<title>Pinch</title>
+	<!--CSS Directory-->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+ <link rel="stylesheet" type="text/css" href="css/style.css">
+ <!--Font Styling-->
 </head>
-
-<body>
-
-	<header>
-		<div>
-			<svg version="1.0" encoding="UTF-8" ?>
-				<svg width="53px" height="50px" viewBox="0 0 53 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-					<title>Artboard</title>
-					<svg width="53px" height="50px" viewBox="0 0 53 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-						<title>Artboard</title>
-						<g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-							<circle id="Oval" fill="#D46D1B" cx="26" cy="25" r="25"></circle>
-							<path d="M21.5,12.170067 L9.77056763,34.9994093 L33.2968345,34.8898964 L21.5,12.170067 Z" id="Triangle" stroke="#FFFFFF" stroke-width="2"></path>
-							<path d="M31.5,12.170067 L19.7705676,34.9994093 L43.2968345,34.8898964 L31.5,12.170067 Z" id="Triangle" stroke="#FFFFFF" stroke-width="2"></path>
-						</g>
-					</svg>
-		</div>
-		<nav>
+	<body>
+		<header>
 			<div>
-				<ul>
-					<li><a href="index.html" target="_self">Work</a></li>
-					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
+				<div>
+					<picture>
+						<source srcset="IMG/Logo.jpg" media="(max-width:767px)">
+						<img src="IMG/Logo.jpg" alt="Logo">
+					</picture>
 			</div>
-		</nav>
+			<div>
+				<nav>
+					<ul>
+						<li><a href="index.html" target="_self">Work</a></li>
+						<li><a href="about.html" target="_self">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 	</header>
 	<main>
 		<div>
@@ -42,20 +38,27 @@
 		<div>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 			</picture>
 		</div>
+<!--Introduction-->
 		<div>
 			<h3>Introduction</h3>
 			<p>
 				Pinch is a mobile application that helps people take control of their finances. The main goal was to create an applicationthat people from all financial background can easily navigate and use. Everything from account balances to credit scores
 				are all located in one place.
 			</p>
+		</div>
+<!--My Process-->
+		<div>
 			<h2>My Process</h2>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/pinch_desktop_mockup@600-2.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_desktop_mockup@1200-2.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_desktop_mockup@1200-2.jpg" alt="Pinch Desktop Image">
 			</picture>
+		</div>
+<!--Research-->
+		<div>
 			<h3>Research</h3>
 			<p>
 				By conducting extensive research into the potential competitor's of Pinch and performal several user interviews, I was able to better understand the market for money-saving and banking applications. The interview was made up of the following
@@ -74,8 +77,11 @@
 			</p>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/competitor_analysis_pinch@600.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/competitor_analysis_pinc@1200.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/competitor_analysis_pinc@1200.jpg" alt="Competitor Analysis Image">
 			</picture>
+		</div>
+<!--Ideation-->
+		<div>
 			<h3>Ideation</h3>
 			<p>
 				The data collected during the interview process allowed me to create six user stories and user flows which actions a user would take to accomplish a desired task. The user stories were divided into new customers and returning customers.
@@ -92,16 +98,22 @@
 			</ul>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/User_Flow_Pinch@600-2.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/User_Flow_Pinch_Desktop-2.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/User_Flow_Pinch_Desktop-2.jpg" alt="User Flow">
 			</picture>
+		</div>
+<!--Wireframe-->
+		<div>
 			<h3>Wireframe</h3>
 			<p>
 				After the research and ideation phase, I developed low-fidelity wireframes both by hand and using Balsamiq. The wireframes were created with the user stories in mind.
 			</p>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Low-Fidelity Wireframes@600.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity Wireframes@1200.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity Wireframes@1200.jpg" alt="Balsamiq Image">
 			</picture>
+		</div>
+<!--Design-->
+		<div>
 			<h3>Design</h3>
 			<p>
 				Due to the personal and important nature of this application, the design was made to look clean, simple, and professional. One of the emotional design concepts I applied was to refer to the psychology of color and chose a hue that would be
@@ -109,12 +121,14 @@
 			</p>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_UI_Designs@600.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_UI_Designs@1200.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_UI_Designs@1200.jpg" alt="Pinch Designs Image">
 			</picture>
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/brand_guidelines_pinch@600.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/brand_guidelines_pinch@1200.jpg" alt="My Image">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/brand_guidelines_pinch@1200.jpg" alt="Brand Guidelines Image">
 			</picture>
+		</div>
+		<div>
 			<h3>Prototype</h3>
 			<p>
 				I created a UseBerry scenario-based test to gain insight into user behaviors, such as click time and heatmap analysis. In addition, I conducted face-to-face tests through InVision Prototype to collect more data on user difficulty in
@@ -144,12 +158,15 @@
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/heatmap_pinch@600.jpg" media="(max-width:767px)">
 				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/heatmap_pinch@1200.jpg" alt="My Image">
 			</picture>
+		</div>
+		<div>
 			<h3>Conclusion</h3>
 			<p>
 				Although the first prototype showed that the majority of the users were able to navigate through the app successfully, it also revealed some problems. Based off of the data received from user testing, I have made a variety of changes to the
 				icons and labels, which I am hoping will solve these issues. I also created an additional screen showing users how to slide the home screen buttons. The next step would be to conduct additional user testing to see if these changes have
 				increased user success rates.
 			</p>
+		</div>
 	</main>
 	<footer id="contact">
 
@@ -163,10 +180,11 @@
 		<br>
 		<div>
 			<!--social media icons-->
-			<a href="https://www.linkedin.com/in/marcelle-khalil-84828b70/" target="_blank">
-				<svg height="512px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
-					xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-					xmlns:svg="http://www.w3.org/2000/svg">
+			<div>
+				<a href="https://www.linkedin.com/in/marcelle-khalil-84828b70/" target="_blank">
+					<svg height="512px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#"
+						xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+						xmlns:svg="http://www.w3.org/2000/svg">
 					<defs id="defs19" />
 					<g id="g3021" />
 					<g id="Layer_1_1_" />
@@ -182,8 +200,9 @@
 								id="path3167" style="fill:#ffffff" />
 						</g>
 					</g>
-				</svg>
-
+					</svg>
+			</div>
+			<div>
 				<a href="https://www.instagram.com/gingeruidesign/" target="_blank">
 					<svg id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<style type="text/css">
@@ -318,19 +337,21 @@
 							</g>
 						</g>
 					</svg>
+			</div>
+			<div>
 
-					<a href="https://www.behance.net/marcellekhalil" target="_blank">
-						<svg height="1792" viewBox="0 0 1792 1792" width="1792" xmlns="http://www.w3.org/2000/svg">
-							<path
-								d="M1376 128q119 0 203.5 84.5t84.5 203.5v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960zm-749 367h-371v787h382q117 0 197-57.5t80-170.5q0-158-143-200 107-52 107-164 0-57-19.5-96.5t-56.5-60.5-79-29.5-97-8.5zm-22 318h-176v-184h163q119 0 119 90 0 94-106 94zm9 335h-185v-217h189q124 0 124 113 0 104-128 104zm650 32q-68 0-104-38t-36-107h411q1-10 1-30 0-132-74.5-220.5t-203.5-88.5q-128 0-210 86t-82 216q0 135 79 217t213 82q205 0 267-191h-138q-11 34-47.5 54t-75.5 20zm-10-366q113 0 124 122h-254q4-56 39-89t91-33zm-162-266h319v77h-319v-77z" />
-							</svg>
-		</div>
-		<div>
-			<p>Copyright Marcelle Khalil 2020</p>
-		</div>
+				<a href="https://www.behance.net/marcellekhalil" target="_blank">
+					<svg height="1792" viewBox="0 0 1792 1792" width="1792" xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M1376 128q119 0 203.5 84.5t84.5 203.5v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960zm-749 367h-371v787h382q117 0 197-57.5t80-170.5q0-158-143-200 107-52 107-164 0-57-19.5-96.5t-56.5-60.5-79-29.5-97-8.5zm-22 318h-176v-184h163q119 0 119 90 0 94-106 94zm9 335h-185v-217h189q124 0 124 113 0 104-128 104zm650 32q-68 0-104-38t-36-107h411q1-10 1-30 0-132-74.5-220.5t-203.5-88.5q-128 0-210 86t-82 216q0 135 79 217t213 82q205 0 267-191h-138q-11 34-47.5 54t-75.5 20zm-10-366q113 0 124 122h-254q4-56 39-89t91-33zm-162-266h319v77h-319v-77z" />
+					</svg>
+			</div>
+			<div>
+				<p>Copyright Marcelle Khalil 2020</p>
+			</div>
 
 	</footer>
-</body>
+	</body>
 
 
-</html>
+	</html>
