--- a/Pinch.html
+++ b/Pinch.html
@@ -108,8 +108,8 @@
 				After the research and ideation phase, I developed low-fidelity wireframes both by hand and using Balsamiq. The wireframes were created with the user stories in mind.
 			</p>
 			<picture>
-				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Low-Fidelity Wireframes@600.jpg" media="(max-width:767px)">
-				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity Wireframes@1200.jpg" alt="Balsamiq Image">
+				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Low-Fidelity-Wireframes@600.jpg" media="(max-width:767px)">
+				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity-Wireframes@1200.jpg" alt="Balsamiq Image">
 			</picture>
 		</div>
 <!--Design-->
