--- a/Pinch.html
+++ b/Pinch.html
@@ -41,7 +41,7 @@
 				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 			</picture>
 		</div>
-<!--Introduction-->
+<!--Introduction/ Background-->
 		<div>
 			<h3>Introduction</h3>
 			<p>
