--- a/Pinch.html
+++ b/Pinch.html
@@ -14,7 +14,7 @@
 
 </head>
 
-	<body class="portfolio" id="portfolio">
+	<body class="portfolio">
 		<header class="home" id="navbar"> id="navbar">
 			<div class="container">
 				<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>"
