--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<header class="home" id="navbar">
+	<header class="home" id="nav">
 		<div class="container">
 			<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
 				<nav>
@@ -27,87 +27,92 @@
 			</div>
 	</header>
 	<main>
-		<div>
-			<h1> Hi! My name is Marcelle Khalil-Hein and I am a UI/UX designer in Los Angeles, CA</h1>
+	<!--hero-->
+		<div id="hero">
+			<div class="container">
+			<h1> Hi! My name is Marcelle Khalil-Hein and I am a UI/UX designer in Los Angeles, CA.</h1>
 		</div>
-		<div id="Work" class="container">
-			<h2> My Work</h2>
-		</div>
-		<!--Pinch-->
-		<div>
-			<div>
+	<!--End Hero-->
+
+	<!--Work-->
+		<div id="work">
+			<div class="container">
+					<h2 class="center">My Work</h2>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 				</picture>
 			</div>
-			<div>
+			<div id="work" class="container">
 				<h3>Pinch</h3>
 				<p>Pinch is a mobile application that helps people take control of their finances.</p>
 				<p>Tools Used: Balasmiq, Sketch, Invision, UseBerry, Figma</p>
 					<a href="Pinch.html" class="button">Read more</a>
+				<div class="row">
 			</div>
 		</div>
 		<br>
 		<!--Uproar-->
-		<div>
-			<div>
+		<div id="work">
+			<div class="container">
 				<picture>
 					<source srcset="IMG/Audio-Education-App/Audio-App-Phone/Uproar_Prototypes@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Audio-Education-App/Audio-App-Desktop/Uproar_Prototype@1200.jpg" alt="Audio Education App Image">
 				</picture>
 			</div>
-			<div>
+			<div id="work" class="container">
 				<h3>Uproar</h3>
 				<p>Uproar is a music and podcast application for students and educators.</p>
 				<p>Tools Used: Sketch, Invision, UseBerry</p>
 				<a href="#" class="button">Read more</a>
+				<div class="row">
 			</div>
 		</div>
 		<br>
 		<!--Saucy-->
-		<div>
-			<div>
+		<div id="work">
+			<div class="container">
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Recipe_app_Responsive_Prototypes_600px-2.jpg" media="(max-width:767px)">
 					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Recipe_app_responsive_prototypes@1200pxe-2.jpg" alt="Saucy Responsive App Image">
 				</picture>
 			</div>
-			<div>
+			<div id="work" class="container">
 				<h3>Saucy</h3>
 				<p>Saucy is a responsive recipe application that allows users to add, save, rate, and share recipes.</p>
 				<p>Tools Used: Adobe XD & UseBerry</p>
 				<a href="#" class="button">Read more</a>
+				<div class="row">
 			</div>
 		</div>
 		<br>
 		<!--Fetch-->
-		<div>
-			<div>
+		<div id="work" class="container">
 				<picture>
 					<source srcset="IMG/Dog-Walking-App/Fetch-Phone/iOS_Mockups_Fecth.jpg" media="(max-width:767px)">
 					<img src="IMG/Dog-Walking-App/Fetch-Desktop/Android_Mockups_fetch@1200.jpg" alt="My Image">
 				</picture>
 			</div>
-			<div>
+			<div id="work" class="container">
 				<h3>Fetch</h3>
 				<p>Fetch is a native app created for loving pet parents.</p>
 				<p>Tools Used: Sketch, UseBerry, Figma</p>
 				<a href="#" class="button">Read more</a>
+				<div class="row">
 			</div>
 		</div>
 	</main>
 	<!--Footer-->
-	<footer id="contact">
-		<div class="container">
+	<footer id="contact" class="container">
 				<h2>Get In Touch</h2>
 				<p>Want to discuss opportunities? Feel free to get in touch.</p>
 			</div>
-			<div class="row">
+			<div class="container">
 				<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
 			</div>
 		<br>
 		<!--social media icons-->
+<div class="container">
 			<div class="row">
                 <a href="https://www.linkedin.com/in/marcelle-khalil-hein-84828b70/" target="blank">
                     <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
