--- a/Pinch.html
+++ b/Pinch.html
@@ -5,20 +5,19 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="Marcelle Khalil-Hein" content="Marcelle Khalil-Hein">
 	<meta name="Marcelle Khalil-Hein Portfolio Page" content="Marcelle Khalil-Hein's Portfolio - Work and Contact Information">
-	<title>Pinch</title>
+	<title>Marcelle Khalil-Hein UX/UI designer Los Angeles, CA</title>
 	<!--CSS Directory-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
 
-	<body class="portfolio">
-		<header class="home" id="navbar"> id="navbar">
-			<div class="container">
-				<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>"
-					<nav>
+<body>
+	<header class="home" id="navbar">
+		<div class="container">
+			<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
+				<nav>
 					<ul>
 						<li><a href="index.html" target="_self">Work</a></li>
 						<li><a href="about.html" target="_self">About</a></li>
@@ -26,19 +25,18 @@
 					</ul>
 				</nav>
 			</div>
-	</header>
 	<main>
-		<div id="project" class="container">
+		<div id="project">
 			<h1>Pinch</h1>
 		</div>
-		<div>
+		<div id="hero">
 			<picture>
 				<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
 				<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 			</picture>
 		</div>
 <!--Introduction/ Background-->
-		<div>
+		<div id="project">
 			<h3>Introduction</h3>
 			<p>
 				Pinch is a mobile application that helps people take control of their finances. The main goal was to create an applicationthat people from all financial background can easily navigate and use. Everything from account balances to credit scores
@@ -168,16 +166,16 @@
 		</div>
 	</main>
 	<!--Footer-->
-	<footer id="contact">
-		<div class="container">
+	<footer id="contact" class="container">
 				<h2>Get In Touch</h2>
 				<p>Want to discuss opportunities? Feel free to get in touch.</p>
 			</div>
-			<div class="row">
+			<div class="container">
 				<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
 			</div>
 		<br>
 		<!--social media icons-->
+<div class="container">
 			<div class="row">
 								<a href="https://www.linkedin.com/in/marcelle-khalil-hein-84828b70/" target="blank">
 										<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -286,6 +284,6 @@
 			<p>Copyright Marcelle Khalil 2020</p>
 		</div>
 	</footer>
-	</body>
+</body>
 
-	</html>
+</html>
