--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 		</div>
 
 			<!--top column-->
-		<div id="about image" class="container">
+		<div id="about-image" class="container">
 			<picture>
 				<source srcset="IMG/About-Me-Image/About-Me-Image-Desktop.jpg" media="(max-width:767px)">
 				<img src="IMG/About-Me-Image/About-Me-Image-Desktop.jpg" alt="About Me Image">
@@ -42,7 +42,7 @@
 
 			<!--left column-->
 			<!--My Story-->
-		<div id="my story" class="container">
+		<div id="my-story" class="container">
 				<h2>My Story</h2>
 				<p>Hi! I'm Marcelle, a UI designer with a background in education and behavioral sciences. I've always had an interest in human behavior, which led me to receive a BA in Anthropology at UCLA and a Master's Degree in Science Education at
 				UC Irvine. I worked as a high school science teacher for several years, which taught me how to clearly communicate my goals and expectations to a diverse group of young people, in addition to exposing me to a variety of education apps.
@@ -54,7 +54,7 @@
 		</div>
 
 <!--right column top--> <!--Skills and tools-->
-			<div id="skills and tools" class="container">
+			<div id="skills-and-tools" class="container">
 				<h2>Skills & Tools</h2>
 			</div>
 
