--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
 
 		<!--Work-->
 		<div id="work">
-			<div class="container">
 				<h2 class="center">My Work</h2>
+			<div class="row">
+				<div class="col-md-6">
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
+					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/new_Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
+					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/New_pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 				</picture>
 			</div>
 		</div>
-		<div class="container">
+		<div class="row">
+			<div class="col-md-6">
 			<h3>Pinch</h3>
 			<p>Pinch is a mobile application that helps people take control of their finances.</p>
 			<p>Tools Used: Balasmiq, Sketch, Invision, UseBerry, Figma</p>
@@ -55,13 +57,15 @@
 		</div>
 		<br>
 		<!--Uproar-->
-		<div class="container">
+		<div class="row">
+			<div class="col-md-6">
 			<picture>
 				<source srcset="IMG/Audio-Education-App/Audio-App-Phone/Uproar_Prototypes@600.jpg" media="(max-width:767px)">
 				<img src="IMG/Audio-Education-App/Audio-App-Desktop/Uproar_Prototype@1200.jpg" alt="Audio Education App Image">
 			</picture>
 		</div>
-		<div class="container">
+		<div class="row">
+			<div class="col-md-6">
 			<h3>Uproar</h3>
 			<p>Uproar is a music and podcast application for students and educators.</p>
 			<p>Tools Used: Sketch, Invision, UseBerry</p>
@@ -100,7 +104,8 @@
 			<p>Tools Used: Sketch, UseBerry, Figma</p>
 			<a href="#" class="button">Read more</a>
 			<div class="row">
-			</div>
+		</div>
+	</div>
 	</main>
 	<!--Footer-->
 	<footer id="contact">
