--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 		<div id="my-story">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8">
+					<div class="column col-md-8 col-lg-9">
 						<h2>My Story</h2>
 						<p>Hi! I'm Marcelle, a UI designer with a background in education and behavioral sciences. I've always had an interest in human behavior, which led me to receive a BA in Anthropology at UCLA and a Master's Degree in Science Education at
 							UC Irvine. I worked as a high school science teacher for several years, which taught me how to clearly communicate my goals and expectations to a diverse group of young people, in addition to exposing me to a variety of education apps.
@@ -55,11 +55,11 @@
 						</p>
 						<a href="Files/Resume_July_2020_Khalil-compressed.pdf" target="blank" class="button">Download My Resume</a>
 					</div>
-					<div class="col-md-4">
+					<div class="column col-md-4 col-lg-3">
 						<h2>Skills & Tools</h2>
 					</div>
 					<div class="row">
-						<div class="col-md-4">
+						<div class="column col-md-4 col-lg-3">
 							<h3>Relevant Skills</h3>
 							<ul>
 								<li>UX Research</li>
@@ -70,8 +70,7 @@
 								<li>UI Design</li>
 							</ul>
 						</div>
-						<div class="row">
-							<div class="col-md-4">
+						<div class="column col-md-4 col-lg-3">
 								<h3>Tools I Use</h3>
 								<ul>
 									<li>Adobe XD</li>
