--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 </head>
 
 <body>
-	<header class="home" id="navbar">
+	<header>
 		<div class="container">
+			<div class="row">
+				<div class="column col-md-6 col-lg-7">
 			<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
-			<nav>
+		</div>
+			<nav class="column col-md-6 col-lg-5">
 				<ul>
 					<li><a href="index.html" target="_self">Work</a></li>
 					<li><a href="about.html" target="_self">About</a></li>
@@ -1073,6 +1076,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="center">
+					<div class="zoom">
 					<a href="https://www.linkedin.com/in/marcelle-khalil-hein-84828b70/" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M69.6875 78.4375H10.3125C5.48 78.4375 1.5625 74.52 1.5625 69.6875V10.3125C1.5625 5.48 5.48 1.5625 10.3125 1.5625H69.6875C74.52 1.5625 78.4375 5.48 78.4375 10.3125V69.6875C78.4375 74.52 74.52 78.4375 69.6875 78.4375Z"
@@ -1101,6 +1105,7 @@
 							<path d="M40.8992 10.625H40.8806C40.0178 10.625 39.3181 9.92547 39.3181 9.0625C39.3181 8.19953 40.0178 7.5 40.8806 7.5H40.8992C41.762 7.5 42.4617 8.19953 42.4617 9.0625C42.4617 9.92547 41.762 10.625 40.8992 10.625Z" fill="black" />
 						</svg>
 					</a>
+
 					<a href="https://www.behance.net/marcellekhalil" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M78.4375 7.8125V72.1875C78.4375 75.639 75.639 78.4375 72.1875 78.4375H7.8125C4.36096 78.4375 1.5625 75.639 1.5625 72.1875V7.8125C1.5625 4.36096 4.36096 1.5625 7.8125 1.5625H72.1875C75.639 1.5625 78.4375 4.36096 78.4375 7.8125Z"
@@ -1157,6 +1162,7 @@
 							<path d="M21.25 9.84375H52.5C53.363 9.84375 54.0625 9.14429 54.0625 8.28125C54.0625 7.41821 53.363 6.71875 52.5 6.71875H21.25C20.387 6.71875 19.6875 7.41821 19.6875 8.28125C19.6875 9.14429 20.387 9.84375 21.25 9.84375Z" fill="black" />
 						</svg>
 					</a>
+				</div>
 				</div>
 			</div>
 		</div>
