--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,8 @@
 							<path d="M40.8992 10.625H40.8806C40.0178 10.625 39.3181 9.92547 39.3181 9.0625C39.3181 8.19953 40.0178 7.5 40.8806 7.5H40.8992C41.762 7.5 42.4617 8.19953 42.4617 9.0625C42.4617 9.92547 41.762 10.625 40.8992 10.625Z" fill="black" />
 						</svg>
 					</a>
-
+				</div>
+				<div class="zoom>"
 					<a href="https://www.behance.net/marcellekhalil" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M78.4375 7.8125V72.1875C78.4375 75.639 75.639 78.4375 72.1875 78.4375H7.8125C4.36096 78.4375 1.5625 75.639 1.5625 72.1875V7.8125C1.5625 4.36096 4.36096 1.5625 7.8125 1.5625H72.1875C75.639 1.5625 78.4375 4.36096 78.4375 7.8125Z"
@@ -1145,6 +1146,8 @@
 							</defs>
 						</svg>
 					</a>
+				</div>
+				<div class="zoom>"
 					<a href="https://github.com/mkhalil44" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M72.1875 1.5625H7.8125C4.36096 1.5625 1.5625 4.36096 1.5625 7.8125V72.1875C1.5625 75.639 4.36096 78.4375 7.8125 78.4375H72.1875C75.639 78.4375 78.4375 75.639 78.4375 72.1875V7.8125C78.4375 4.36096 75.639 1.5625 72.1875 1.5625Z"
@@ -1162,6 +1165,7 @@
 							<path d="M21.25 9.84375H52.5C53.363 9.84375 54.0625 9.14429 54.0625 8.28125C54.0625 7.41821 53.363 6.71875 52.5 6.71875H21.25C20.387 6.71875 19.6875 7.41821 19.6875 8.28125C19.6875 9.14429 20.387 9.84375 21.25 9.84375Z" fill="black" />
 						</svg>
 					</a>
+				</div>
 				</div>
 				</div>
 			</div>
