--- a/about.html
+++ b/about.html
@@ -13,21 +13,22 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
-	<header class="home" id="navbar">
-		<div class="container">
-			<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
-			<nav>
-				<ul>
-					<li><a href="index.html" target="_self">Work</a></li>
-					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-
-	<main>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="column col-md-6 col-lg-7">
+		<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
+	</div>
+		<nav class="column col-md-6 col-lg-5">
+			<ul>
+				<li><a href="index.html" target="_self">Work</a></li>
+				<li><a href="about.html" target="_self">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
+<main>
 		<div id="about-me">
 			<div class="container">
 				<h1 class="center">About Me</h1>
@@ -69,8 +70,6 @@
 								<li>User Empathy</li>
 								<li>UI Design</li>
 							</ul>
-						</div>
-						<div class="column col-md-4 col-lg-3">
 								<h3>Tools I Use</h3>
 								<ul>
 									<li>Adobe XD</li>
@@ -80,6 +79,7 @@
 									<li>Figma</li>
 									<li>Balsamiq</li>
 								</ul>
+							</div>
 							</div>
 						</div>
 					</div>
