--- a/Pinch.html
+++ b/Pinch.html
@@ -13,19 +13,22 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
-	<header class="home" id="navbar">
-		<div class="container">
-			<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
-			<nav>
-				<ul>
-					<li><a href="index.html" target="_self">Work</a></li>
-					<li><a href="about.html" target="_self">About</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
-		<main>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="column col-md-6 col-lg-7">
+		<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
+	</div>
+		<nav class="column col-md-6 col-lg-5">
+			<ul>
+				<li><a href="index.html" target="_self">Work</a></li>
+				<li><a href="about.html" target="_self">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
+<main>
 			<div id="project">
 				<h1>Pinch</h1>
 			</div>
