--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
-			<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
+			<a href="index.html"><img src="IMG/Logo3.png" alt="Marcelle Khalil" class="logo"></a>
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul>
