--- a/about.html
+++ b/about.html
@@ -13,21 +13,23 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<header>
-	<div class="container">
-		<div class="row">
-			<div class="column col-md-6 col-lg-7">
-		<a href="index.html"><img src="IMG/Logo.svg" alt="Marcelle Khalil" class="logo"></a>
+<body>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="column col-md-6 col-lg-7">
+			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
+		</div>
+			<nav class="column col-md-6 col-lg-5">
+				<ul class="topbottombordersout">
+					<li><a href="index.html" target="_self">Work</a></li>
+					<li><a href="about.html" target="_self">About</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
-		<nav class="column col-md-6 col-lg-5">
-			<ul>
-				<li><a href="index.html" target="_self">Work</a></li>
-				<li><a href="about.html" target="_self">About</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</div>
-</header>
+	</header>
 <main>
 		<div id="about-me">
 			<div class="container">
@@ -93,16 +95,23 @@
 	<footer id="contact">
 		<div class="container">
 			<h2 class="center">Get In Touch</h2>
+			<div class="spacer">
 			<p class="center">Want to discuss opportunities? Feel free to get in touch.</p>
+			</div>
 		</div>
-		<br>
-		<div class="center">
+
+<div class="container">
+	<div class="center">
+		<div class="spacer">
 			<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
+</div>
 		</div>
+	</div>
 		<!--social media icons-->
 		<div class="container">
 			<div class="row">
 				<div class="center">
+					<div class="zoom">
 					<a href="https://www.linkedin.com/in/marcelle-khalil-hein-84828b70/" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M69.6875 78.4375H10.3125C5.48 78.4375 1.5625 74.52 1.5625 69.6875V10.3125C1.5625 5.48 5.48 1.5625 10.3125 1.5625H69.6875C74.52 1.5625 78.4375 5.48 78.4375 10.3125V69.6875C78.4375 74.52 74.52 78.4375 69.6875 78.4375Z"
@@ -131,6 +140,8 @@
 							<path d="M40.8992 10.625H40.8806C40.0178 10.625 39.3181 9.92547 39.3181 9.0625C39.3181 8.19953 40.0178 7.5 40.8806 7.5H40.8992C41.762 7.5 42.4617 8.19953 42.4617 9.0625C42.4617 9.92547 41.762 10.625 40.8992 10.625Z" fill="black" />
 						</svg>
 					</a>
+				</div>
+				<div class="zoom">
 					<a href="https://www.behance.net/marcellekhalil" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M78.4375 7.8125V72.1875C78.4375 75.639 75.639 78.4375 72.1875 78.4375H7.8125C4.36096 78.4375 1.5625 75.639 1.5625 72.1875V7.8125C1.5625 4.36096 4.36096 1.5625 7.8125 1.5625H72.1875C75.639 1.5625 78.4375 4.36096 78.4375 7.8125Z"
@@ -170,6 +181,8 @@
 							</defs>
 						</svg>
 					</a>
+				</div>
+				<div class="zoom">
 					<a href="https://github.com/mkhalil44" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M72.1875 1.5625H7.8125C4.36096 1.5625 1.5625 4.36096 1.5625 7.8125V72.1875C1.5625 75.639 4.36096 78.4375 7.8125 78.4375H72.1875C75.639 78.4375 78.4375 75.639 78.4375 72.1875V7.8125C78.4375 4.36096 75.639 1.5625 72.1875 1.5625Z"
@@ -188,10 +201,11 @@
 						</svg>
 					</a>
 				</div>
-			</div>
+				</div>
+				</div>
 		</div>
 		<div>
-			<p>Copyright Marcelle Khalil 2020</p>
+			<p>© Marcelle Khalil-Hein 2020</p>
 		</div>
 	</footer>
 </body>
