--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
-			<a href="index.html"><img src="IMG/Logo3.png" alt="Marcelle Khalil" class="logo"></a>
+			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
 		</div>
 			<nav class="column col-md-6 col-lg-5">
-				<ul>
+				<ul class="topbottombordersout">
 					<li><a href="index.html" target="_self">Work</a></li>
 					<li><a href="about.html" target="_self">About</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -990,7 +990,7 @@
 		</div>
 	</div>
 			<!--Pinch-->
-			<div class="container">
+			<div class="project-card">
 				<div class="row">
 					<div class="column col-md-6 col-lg-7">
 						<picture>
@@ -1064,12 +1064,16 @@
 	<footer id="contact">
 		<div class="container">
 			<h2 class="center">Get In Touch</h2>
+			<div class="spacer">
 			<p class="center">Want to discuss opportunities? Feel free to get in touch.</p>
+			</div>
 		</div>
 
 <div class="container">
 	<div class="center">
+		<div class="spacer">
 			<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
+</div>
 		</div>
 	</div>
 		<!--social media icons-->
@@ -1106,7 +1110,7 @@
 						</svg>
 					</a>
 				</div>
-				<div class="zoom>"
+				<div class="zoom">
 					<a href="https://www.behance.net/marcellekhalil" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M78.4375 7.8125V72.1875C78.4375 75.639 75.639 78.4375 72.1875 78.4375H7.8125C4.36096 78.4375 1.5625 75.639 1.5625 72.1875V7.8125C1.5625 4.36096 4.36096 1.5625 7.8125 1.5625H72.1875C75.639 1.5625 78.4375 4.36096 78.4375 7.8125Z"
@@ -1147,7 +1151,7 @@
 						</svg>
 					</a>
 				</div>
-				<div class="zoom>"
+				<div class="zoom">
 					<a href="https://github.com/mkhalil44" target="blank">
 						<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M72.1875 1.5625H7.8125C4.36096 1.5625 1.5625 4.36096 1.5625 7.8125V72.1875C1.5625 75.639 4.36096 78.4375 7.8125 78.4375H72.1875C75.639 78.4375 78.4375 75.639 78.4375 72.1875V7.8125C78.4375 4.36096 75.639 1.5625 72.1875 1.5625Z"
@@ -1171,7 +1175,7 @@
 			</div>
 		</div>
 		<div>
-			<p>Copyright Marcelle Khalil 2020</p>
+			<p>© Marcelle Khalil-Hein 2020</p>
 		</div>
 	</footer>
 </body>
